--- a/ansible/roles/mail/tasks/templates/mailman.conf
+++ b/ansible/roles/mail/tasks/templates/mailman.conf
@@ -1,13 +1,21 @@
 <VirtualHost *:80>
     {% if 'letsencrypt' in group_names %}
     ServerName {{ mail.http_hostname }}
+    ServerAlias lists.orm-dev
     Include /etc/apache2/sites-available/letsencrypt-acme-challenges.inc
     Include /etc/apache2/sites-available/redirect-http.inc
     {% else %}
-    Include /etc/apache2/sites-available/mailman.inc
+#    Include /etc/apache2/sites-available/mailman.inc
+    Include /etc/mailman3/apache.conf
+    <Location /mailman3/hyperkitty>
+        Require local
+    </Location>
     {% endif %}
 </VirtualHost>
 <VirtualHost *:443>
+    ServerName {{ mail.http_hostname }}
+    ServerAlias lists.orm-dev
+
     SSLEngine on
     SSLCertificateFile /etc/letsencrypt/openrailwaymap.org-old/live/openrailwaymap.org/fullchain.pem
     SSLCertificateKeyFile /etc/letsencrypt/openrailwaymap.org-old/live/openrailwaymap.org/privkey.pem
@@ -18,8 +26,18 @@
     SSLHonorCipherOrder off
     SSLSessionTickets off
 
-    Include /etc/apache2/sites-available/mailman.inc
+#    Include /etc/apache2/sites-available/mailman.inc
+    Include /etc/mailman3/apache.conf
+    <Location /mailman3/hyperkitty>
+        Require local
+    </Location>
     {% if 'letsencrypt' in group_names %}
     Include /etc/apache2/sites-available/letsencrypt-acme-challenges.inc
     {% endif %}
 </VirtualHost>
+
+# requests without Host header
+Include /etc/mailman3/apache.conf
+<Location /mailman3/hyperkitty>
+    Require local
+</Location>
