Restrict external acccess to Hyperkitty API, not whole Hyperkitty

--- a/ansible/roles/mail/tasks/templates/mailman.conf
+++ b/ansible/roles/mail/tasks/templates/mailman.conf
@@ -7,7 +7,7 @@
     {% else %}
 #    Include /etc/apache2/sites-available/mailman.inc
     Include /etc/mailman3/apache.conf
-    <Location /mailman3/hyperkitty>
+    <Location /mailman3/hyperkitty/api>
         Require local
     </Location>
     {% endif %}
@@ -28,7 +28,7 @@
 
 #    Include /etc/apache2/sites-available/mailman.inc
     Include /etc/mailman3/apache.conf
-    <Location /mailman3/hyperkitty>
+    <Location /mailman3/hyperkitty/api>
         Require local
     </Location>
     {% if 'letsencrypt' in group_names %}
@@ -38,6 +38,6 @@
 
 # requests without Host header
 Include /etc/mailman3/apache.conf
-<Location /mailman3/hyperkitty>
+<Location /mailman3/hyperkitty/api>
     Require local
 </Location>
