enable Mailman 2 again

--- a/ansible/roles/mail/tasks/templates/mailman.conf
+++ b/ansible/roles/mail/tasks/templates/mailman.conf
@@ -5,7 +5,7 @@
     Include /etc/apache2/sites-available/letsencrypt-acme-challenges.inc
     Include /etc/apache2/sites-available/redirect-http.inc
     {% else %}
-#    Include /etc/apache2/sites-available/mailman.inc
+    Include /etc/apache2/sites-available/mailman.inc
     Include /etc/mailman3/apache.conf
     <Location /mailman3/hyperkitty/api>
         Require local
@@ -26,7 +26,7 @@
     SSLHonorCipherOrder off
     SSLSessionTickets off
 
-#    Include /etc/apache2/sites-available/mailman.inc
+    Include /etc/apache2/sites-available/mailman.inc
     Include /etc/mailman3/apache.conf
     <Location /mailman3/hyperkitty/api>
         Require local
