--- a/ansible/roles/mail/tasks/templates/mailman.conf
+++ b/ansible/roles/mail/tasks/templates/mailman.conf
@@ -36,8 +36,12 @@
     {% endif %}
 </VirtualHost>
 
-# requests without Host header
-Include /etc/mailman3/apache.conf
-<Location /mailman3/hyperkitty/api>
-    Require local
-</Location>
+<VirtualHost *:80>
+    # requests by mailman3-hyperkitty (the archiver)
+    ServerName 127.0.0.1
+    ServerAlias localhost
+    Include /etc/mailman3/apache.conf
+    <Location /mailman3/hyperkitty/api>
+        Require local
+    </Location>
+</VirtualHost>
