Mailman: add redirect from / to /mailman3

--- a/ansible/roles/mail/tasks/templates/mailman.conf
+++ b/ansible/roles/mail/tasks/templates/mailman.conf
@@ -28,6 +28,7 @@
 
     Include /etc/apache2/sites-available/mailman.inc
     Include /etc/mailman3/apache.conf
+    RedirectMatch "^/$" "/mailman3"
     <Location /mailman3/hyperkitty/api>
         Require local
     </Location>
