Letsencrypt: add lists, change renewal day to 10
I run the renewal script today manually.

--- a/ansible/roles/mail/tasks/templates/mailman.conf
+++ b/ansible/roles/mail/tasks/templates/mailman.conf
@@ -17,10 +17,8 @@
     ServerAlias lists.orm-dev
 
     SSLEngine on
-    SSLCertificateFile /etc/letsencrypt/openrailwaymap.org-old/live/openrailwaymap.org/fullchain.pem
-    SSLCertificateKeyFile /etc/letsencrypt/openrailwaymap.org-old/live/openrailwaymap.org/privkey.pem
-#    SSLCertificateFile /etc/letsencrypt/openrailwaymap.org/openrailwaymap.org-chain.crt
-#    SSLCertificateKeyFile /etc/letsencrypt/openrailwaymap.org/domain.key
+    SSLCertificateFile /etc/letsencrypt/openrailwaymap.org/openrailwaymap.org-chain.crt
+    SSLCertificateKeyFile /etc/letsencrypt/openrailwaymap.org/domain.key
     SSLProtocol all -SSLv3 -TLSv1 -TLSv1.1
     SSLCipherSuite ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384
     SSLHonorCipherOrder off
