--- a/ansible/hosts.yml
+++ b/ansible/hosts.yml
@@ -35,7 +35,7 @@ all:
         buegelfalte.openrailwaymap.org
       vars:
         ssl_domain: openrailwaymap.org
-        certificate_alt_names: 'DNS:buegelfalte.openrailwaymap.org,DNS:openrailwaymap.org,DNS:www.openrailwaymap.org,DNS:tiles.openrailwaymap.org,DNS:a.tiles.openrailwaymap.org,DNS:b.tiles.openrailwaymap.org,DNS:c.tiles.openrailwaymap.org,DNS:api.openrailwaymap.org,DNS:blog.openrailwaymap.org'
+        certificate_alt_names: 'DNS:buegelfalte.openrailwaymap.org,DNS:openrailwaymap.org,DNS:www.openrailwaymap.org,DNS:tiles.openrailwaymap.org,DNS:a.tiles.openrailwaymap.org,DNS:b.tiles.openrailwaymap.org,DNS:c.tiles.openrailwaymap.org,DNS:api.openrailwaymap.org,DNS:blog.openrailwaymap.org,DNS:lists.openrailwaymap.org'
 
     tileserver:
       hosts:
