Allow to set multiple keys in .ssh/authorized_keys, update Michaels keys

--- a/ansible/roles/base/tasks/main.yml
+++ b/ansible/roles/base/tasks/main.yml
@@ -14,9 +14,9 @@
 
   - name: Add SSH public key
     authorized_key:
-      user: "{{ item.name }}"
-      key: "{{ item.ssh_public_key }}"
-    loop: "{{ users }}"
+      user: "{{ item.0.name }}"
+      key: "{{ item.1 }}"
+    loop: "{{ users|subelements('ssh_public_keys') }}"
 
   - name: Install sudo
     apt:
