--- a/ansible/hosts.yml
+++ b/ansible/hosts.yml
@@ -40,6 +40,8 @@ all:
       hosts:
         buegelfalte.openrailwaymap.org:
       vars:
+        tileserver:
+          development_tools: true
         osm_dbname: gis
         pg_version: 11
         tileserver_script_dir: /opt/OpenRailwayMap-server-config
