--- a/ansible/hosts.yml
+++ b/ansible/hosts.yml
@@ -1,6 +1,7 @@
 all:
   hosts:
     buegelfalte.openrailwaymap.org:
+      ansible_become: yes
       apache2_logdir: /var/log/apache2
       apache2:
         max_request_workers: 240
