--- a/ansible/roles/backup_access/tasks/main.yml
+++ b/ansible/roles/backup_access/tasks/main.yml
@@ -1,6 +1,6 @@
 # SPDX-License-Identifier: MIT
 - hosts: all
-  become: yes
+  remote_user: michael
   tasks:
     - name: Create users to make backup
       user:
