--- a/ansible/roles/blog/tasks/main.yml
+++ b/ansible/roles/blog/tasks/main.yml
@@ -1,6 +1,6 @@
 # SPDX-License-Identifier: MIT
 - hosts: all
-  become: yes
+  remote_user: root
 
   tasks:
   - name: Install required packages from APT
