--- a/ansible/roles/tileserver_step2/tasks/main.yml
+++ b/ansible/roles/tileserver_step2/tasks/main.yml
@@ -1,6 +1,6 @@
 # SPDX-License-Identifier: MIT
 - hosts: all
-  become: yes
+  remote_user: michael
 
   tasks:
     #TODO handle recreation of existing views if schema changes
