Keep diff file if the update failed

--- a/scripts/config.cfg
+++ b/scripts/config.cfg
@@ -31,6 +31,10 @@ PLANET_FILTERED=$OSM_DIR/planet-railway.osm.pbf
 PLANET_FILTERED_OLD=$OSM_DIR/old-planet-railway.osm.pbf
 # Path to derived diff file with railway changes
 DERIVED_DIFF=$OSM_DIR/railway_updates.osc.gz
+# Path to diff with changes from last time whose application to the database failed
+LAST_DERIVED_DIFF=$OSM_DIR/railway_updates_old.osc.gz
+# Temporary file for the diff to be used if older changes are merged with newer changes because the application of the older changes failed
+DERIVED_DIFF_TMP=$OSM_DIR/tmp_railway_updates.osc.gz
 
 # Path to timestamp file for website
 TIMESTAMP_PATH=/nvme/data/timestamp.txt
