Get along with the limited number of database connections better
Reduce number of database connections the API may use. Improve the
update script in order to store diffs which failed to apply and try it
later. As of now, they get lost.

--- a/ansible/roles/website/tasks/main.yml
+++ b/ansible/roles/website/tasks/main.yml
@@ -38,6 +38,7 @@
     loop:
       - {'regex': '^(\s*"prefix": *")openrailwaymap("\s*,\s*)$', 'replacement': '\1openrailwaymap_api\2'}
       - {'regex': '^(\s*"database": *")openrailwaymap("\s*,\s*)$', 'replacement': '\1gis\2'}
+      - {'regex': '^(\s*"maxPoolSize": *")[^"]+("\s*,\s*)$', 'replacement': '\116\2'}
 
   - name: Create database views and indexes for the API
     become: true
