--- a/ansible/roles/blog/tasks/templates/blog.openrailwaymap.org.conf
+++ b/ansible/roles/blog/tasks/templates/blog.openrailwaymap.org.conf
@@ -1,6 +1,14 @@
 <VirtualHost *:80>
+{% if 'letsencrypt' in group_names %}
+    ServerName {{ blog.hostname }}
+    Include /etc/apache2/sites-available/letsencrypt-acme-challenges.inc
+    Include /etc/apache2/sites-available/redirect-http.inc
+{% else %}
     Include /etc/apache2/sites-available/blog.openrailwaymap.org.inc
+{% endif %}
 </VirtualHost>
+{% if 'letsencrypt' in group_names %}
+
 <VirtualHost *:443>
     SSLEngine on
     SSLCertificateFile /etc/letsencrypt/openrailwaymap.org/openrailwaymap.org-chain.crt
@@ -11,4 +19,8 @@
     SSLSessionTickets off
 
     Include /etc/apache2/sites-available/blog.openrailwaymap.org.inc
+{% if 'letsencrypt' in group_names %}
+    Include /etc/apache2/sites-available/letsencrypt-acme-challenges.inc
+{% endif %}
 </VirtualHost>
+{% endif %}
