unify tileserver_step2 apache configuration

--- a/ansible/hosts.yml
+++ b/ansible/hosts.yml
@@ -43,6 +43,12 @@ all:
       vars:
         tileserver:
           development_tools: true
+          hostname: tiles.openrailwaymap.org
+          hostname_aliases:
+            - a.tiles.openrailwaymap.org
+            - b.tiles.openrailwaymap.org
+            - c.tiles.openrailwaymap.org
+            - tiles.buegelfalte.openrailwaymap.org
         osm_dbname: gis
         pg_version: 11
         tileserver_script_dir: /opt/OpenRailwayMap-server-config
