--- a/ansible/roles/tileserver_step2/tasks/templates/tiles.openrailwaymap.org.conf
+++ b/ansible/roles/tileserver_step2/tasks/templates/tiles.openrailwaymap.org.conf
@@ -16,6 +16,7 @@
         Include /etc/apache2/sites-available/tiles.openrailwaymap.org.inc
     {% endif %}
 </VirtualHost>
+{% if 'letsencrypt' in group_names %}
 <VirtualHost *:443>
     SSLEngine on
     SSLCertificateFile /etc/letsencrypt/openrailwaymap.org/openrailwaymap.org-chain.crt
@@ -26,5 +27,8 @@
     SSLSessionTickets off
 
     Include /etc/apache2/sites-available/tiles.openrailwaymap.org.inc
+{% if 'letsencrypt' in group_names %}
     Include /etc/apache2/sites-available/letsencrypt-acme-challenges.inc
+{% endif %}
 </VirtualHost>
+{% endif %}
