unify https handling in website role

--- a/ansible/roles/website/tasks/templates/api.openrailwaymap.org.conf
+++ b/ansible/roles/website/tasks/templates/api.openrailwaymap.org.conf
@@ -7,6 +7,7 @@
     Include /etc/apache2/sites-available/api.openrailwaymap.org.inc
     {% endif %}
 </VirtualHost>
+{% if 'letsencrypt' in group_names %}
 <VirtualHost *:443>
     SSLEngine on
     SSLCertificateFile /etc/letsencrypt/openrailwaymap.org/openrailwaymap.org-chain.crt
@@ -21,3 +22,4 @@
     Include /etc/apache2/sites-available/letsencrypt-acme-challenges.inc
     {% endif %}
 </VirtualHost>
+{% endif %}
