--- a/ansible/roles/website/tasks/templates/www.openrailwaymap.org.conf
+++ b/ansible/roles/website/tasks/templates/www.openrailwaymap.org.conf
@@ -10,6 +10,7 @@
     Include /etc/apache2/sites-available/www.openrailwaymap.org.inc
     {% endif %}
 </VirtualHost>
+{% if 'letsencrypt' in group_names %}
 <VirtualHost *:443>
     SSLEngine on
     SSLCertificateFile /etc/letsencrypt/openrailwaymap.org/openrailwaymap.org-chain.crt
@@ -24,3 +25,4 @@
     Include /etc/apache2/sites-available/letsencrypt-acme-challenges.inc
     {% endif %}
 </VirtualHost>
+{% endif %}
